# readings

./: .gitignore  README.md  manage.py  pyproject.toml
books/: admin.py  models.py  views.py
books/migrations/: 0001_initial.py
books/templates/: index.html
readings/: asgi.py  settings.py  urls.py  wsgi.py
static/: style.css
templates/: base.html
templates/admin/: base_site.html
